# beamz-notebooks

./: .gitignore  3d_wg.ipynb  README.md  animation_demo.ipynb  mkdocs.yml  pyproject.toml  ring_resonator_temp.gds  topo_opt_bend.ipynb
.github/workflows/: deploy.yml  docs.yml
docs/: about.md  getting-started.md  index.md
docs/css/: notebook.css  variables.css
docs/examples/: animation_demo.ipynb  topo_opt_bend.ipynb
docs/js/: math.js  notebook.js
docs/overrides/templates/: dark.html
notebooks/: animation_demo.ipynb  mmi_3d_workflow.ipynb  ring_resonator.ipynb  topo_new.ipynb  topo_opt_bend.ipynb
notebooks/notebooks/data/: mmi_3d_sparams.npz  mmi_3d_sparams_mag.csv
website/: index.html  package-lock.json  package.json  vite.config.ts
website/scripts/: build-notebooks.ts  generate-static-html.ts
website/src/: App.tsx  index.css
website/src/components/gallery/: GalleryCard.tsx  SubmitNotebookCard.tsx
website/src/components/layout/: Footer.tsx  Header.tsx  Layout.tsx  TableOfContents.tsx
website/src/components/notebook/: CodeCell.tsx  MarkdownCell.tsx  NotebookRenderer.tsx  OutputCell.tsx
website/src/hooks/: useTheme.ts
website/src/pages/: HomePage.tsx  NotFoundPage.tsx  NotebookPage.tsx
website/src/types/: notebook.ts
